--- a/public/index.html
+++ b/public/index.html
@@ -49,8 +49,8 @@
                             <label>QR Code Color:</label>
                             <div class="color-selector">
                                 <div class="color-display" id="qr-color-display" tabindex="0"></div>
-                                <input type="color" id="qr-color" value="#F50000" style="display:none;" />
-                                <input type="text" id="qr-color-hex" class="color-value" maxlength="7" value="#F50000" />
+                                <input type="color" id="qr-color" value="#000000" style="display:none;" />
+                                <input type="text" id="qr-color-hex" class="color-value" maxlength="7" value="#000000" />
                                 <button type="button" class="clear-color-btn" id="clear-qr-color" title="Clear QR color">✕</button>
                             </div>
                         </div>
