--- a/public/index.html
+++ b/public/index.html
@@ -99,6 +99,7 @@
         <div id="qr-result" class="qr-result" style="display: none;">
             <button class="button" id="download-btn">Download as PNG</button>
         </div>
+        <footer class="footer-text">© Botric 2025</footer>
     </div>
 </body>
 </html>
