--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>QR Code Maker - Create Custom QR Codes</title>
+    <title>QR Code Maker - New Create Custom QR Codes</title>
     <meta name="description" content="Create customizable QR codes with colors, styles, sizes, and optional center images. Download high-quality PNG QR codes instantly." />
     <meta name="robots" content="index,follow" />
     <link rel="canonical" href="{{CANONICAL_URL}}" />
